# CRAMPS

./: CMakeLists.txt  com.py  cramps.py  input.txt  listusb.py  usbdevices.map
src/: AMBads1110.c  AMBads1110.h  MCP23S17.c  MCP23S17.h  MI2C.c  MI2C.h  main.c  utils.c  utils.h
